--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -648,7 +648,12 @@ JRG_ADC32ASetup.java \
 A3248Setup.java \
 MARTE_DUTY_CYCLESetup.java \
 SPIDER_SETUPSetup.java \
-RFX_RPADCSetup.java
+RFX_RPADCSetup.java \
+PI_CAMSetup.java  \
+PI_SCT320Setup.java\
+SPECTRO_CFGSetup.java \
+NI6683RECSetup.java 
+
 
 java_DATA = jDevices.jar
 @USE_JARS_DIR_FALSE@java_JAVA = $(SOURCES)
