Feature:Improve National Instruments ADC devices.
A few changes have been added to ScopeUtilities to force validity of SetTimeCOntext also to TdiData, so that exprssions with functions can be optimized. A workaround for wrong dimensions returned by TreeGetSegmentInfo has been added

--- a/javadevices/Makefile.am
+++ b/javadevices/Makefile.am
@@ -165,6 +165,7 @@ A3248Setup.java \
 MARTE_DUTY_CYCLESetup.java \
 SPIDER_SETUPSetup.java \
 RFX_RPADCSetup.java \
+STREAM_SETUPSetup.java \
 PI_CAMSetup.java \
 PI_SCT320Setup.java\
 SPECTRO_CFGSetup.java \
