--- a/javadevices/Makefile.in
+++ b/javadevices/Makefile.in
@@ -670,7 +670,8 @@ PI_SCT320Setup.java\
 SPECTRO_CFGSetup.java \
 NI6683RECSetup.java \
 LINCMOSSetup.java  \
-PLFESetup.java
+PLFESetup.java \
+CRIO_FAUSetup.java
 
 java_DATA = jDevices.jar
 @USE_JARS_DIR_FALSE@java_JAVA = $(SOURCES)
